# finomart-payment-monitor

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  example_output.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: auth.py  config.py  database.py  main.py
app/api/routes/: admin.py  gaps.py  insights.py  metrics.py  reports.py  roi.py  transactions.py  trends.py
app/models/: __init__.py  integration_cost.py  payment_method.py  transaction.py
app/schemas/: insights.py  metrics.py  transaction.py
app/services/: insight_detector.py  market_gap_detector.py  metrics_engine.py  report_generator.py  roi_calculator.py  trend_analyzer.py
scripts/: generate_test_data.py  seed_db.sh
tests/: conftest.py  helpers.py  test_api_metrics.py  test_data_generator.py  test_gaps.py  test_insight_detector.py  test_metrics_engine.py  test_models.py  test_reports.py  test_roi.py  test_smoke.py  test_trends.py
